changed solution, included a sort before the reverse

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5025f696",
+   "id": "89cad54f",
    "metadata": {},
    "source": [
     "# Basic Data Types"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ca5e361",
+   "id": "483b9953",
    "metadata": {},
    "source": [
     "## Find the Runner-Up Score!"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db35a0d",
+   "id": "9a93d794",
    "metadata": {},
    "source": [
     "- Given the participants' score sheet for your University Sports Day, you are required to find the runnerup score.  - You are given 'n' scores. Store them in a list and find the score of the runner-up.\n",
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "0a106805",
+   "execution_count": 23,
+   "id": "db5ed2d4",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
      "text": [
       "3\n",
       "-10 0 10\n",
-      "10\n"
+      "0\n"
      ]
     }
    ],
@@ -74,11 +74,16 @@
     "    # first I created a list out of the map arr\n",
     "    mylist = list(arr)\n",
     "    \n",
+    "    \n",
     "    # Type Casted my list at a set to get rid of duplicates\n",
     "    myset = set(mylist)\n",
     "    \n",
-    "    # Changed the scores back to a list so I can reverse them\n",
+    "    # Changed the scores back to a list so I can sort and reverse them\n",
     "    mylist = list(myset)\n",
+    "    \n",
+    "    # Sorting is an important step to make sure we can get the highest score\n",
+    "    # at mylist[0] when we reverse()\n",
+    "    mylist.sort()\n",
     "    mylist.reverse()\n",
     "    \n",
     "    # Print the index in which the runnerup will always be.\n",
@@ -88,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4afca51f",
+   "id": "a4093bf4",
    "metadata": {},
    "outputs": [],
    "source": []
